<resources>
    <string name="app_name">Scriber</string>
    <!-- First screen data -->

    <!-- Patient flow -->
    <string name="patient_login_screen_title">Patient Login</string>
    <string name="patient_register_screen_title">Patient Registration</string>

    <!-- Doctor flow -->
    <string name="doctor_login_screen_title">Doctor Login</string>
    <string name="doctor_register_screen_title">Doctor Registration</string>


    <!-- General -->
    <string name="password_recover_prompt">Please enter your registered email to recover your account</string>
    <string name="account_recovery_screen_title">Recover Your Account</string>


    <string name="title_activity_doctor_home">DoctorHome</string>
    <string name="title_activity_patient_profile">PatientProfile</string>
    <string name="title_activity_login_page">LoginPage</string>


    <!-- Login Flow -->
    <string name="email_field">email</string>
    <string name="password_field"></string>
    <string name="login_label">Login</string>
    <string name="forgot_pass_prompt">Forgot password?</string>
    <string name="no_account_prompt">Don\'t have an account?</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="register_prompt">Register</string>
    <string name="reset_pass_prompt">Reset Password</string>

    <string name="name_prompt">Name</string>
    <string name="email_prompt">Email</string>
    <string name="dob_month_prompt">Month</string>
    <string name="dob_day_prompt">Day</string>
    <string name="dob_year_prompt">Year</string>
    <string name="address_prompt">Address</string>
    <string name="address_city_prompt">City</string>
    <string name="address_state_prompt">State</string>
    <string name="address_zip_prompt">ZIP Code</string>
    <string name="new_pass_prompt">New Password</string>
    <string name="confirm_pass_prompt">Confirm Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_patient_home">PatientHome</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Example fields for empty inputs. -->
    <string name="example_address_street">e.g. 1234 Elm St.</string>
    <string name="example_address_city">e.g. San Francisco</string>
    <string name="example_address_zip">e.g. 54345</string>

    <string name="example_phone">e.g. 888–505–1000</string>
    <string name="example_date_of_birth">e.g. 01/01/2000</string>
    <string name="example_employer">e.g. Umbrella Corporation</string>
    <string name="example_insurance">e.g. Aetna</string>
    <string name="example_insurance_policy">e.g. 000–00000–00 (formats vary)</string>
    <string name="example_insurance_group">e.g. 123456 (formats vary)</string>

    <string name="example_primary_emergency_name">e.g. Dwight Scott</string>
    <string name="example_secondary_emergency_name">e.g. Angela Beesley</string>


    <!-- All States -->
    <string-array name="states_array">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <string-array name="marital_status_array">
        <item>Not Identified</item>
        <item>Single</item>
        <item>Married</item>
        <item>Widowed</item>
        <item>Separated</item>
        <item>Divorced</item>
    </string-array>
    
    <string-array name="gender_array">
        <item>Not Identified</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="ethnicity_array">
        <item>Not Identified</item>
        <item>Native American or American Indian</item>
        <item>Asian</item>
        <item>Black or African American</item>
        <item>Pacific Islander</item>
        <item>White or Caucasian</item>
    </string-array>

    <string-array name="blood_type_array">
        <item>Not Identified</item>
        <item>A Positive</item>
        <item>A Negative</item>
        <item>B Positive</item>
        <item>B Negative</item>
        <item>AB Positive</item>
        <item>AB Negative</item>
        <item>O Positive</item>
        <item>O Negative</item>
    </string-array>

</resources>
