<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientRegistration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="top|center"
            android:src="@mipmap/favicon"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="30sp"/>

        <EditText
            android:id="@+id/new_patient_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_prompt"
            android:textSize="@dimen/user_entry_field_text"
            android:singleLine = "true"
            android:imeOptions="actionNext"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_entry_separator"/>

        <EditText
            android:id="@+id/new_patient_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_prompt"
            android:textSize="@dimen/user_entry_field_text"
            android:singleLine = "true"
            android:imeOptions="actionNext"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_entry_separator"/>

        <EditText
            android:id="@+id/new_patient_address_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_prompt"
            android:textSize="@dimen/user_entry_field_text"
            android:singleLine = "true"
            android:imeOptions="actionNext"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_entry_separator"/>

        <EditText
            android:id="@+id/new_patient_city_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_city_prompt"
            android:textSize="@dimen/user_entry_field_text"
            android:singleLine = "true"
            android:imeOptions="actionNext"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_entry_separator"/>

        <EditText
            android:id="@+id/new_patient_state_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_state_prompt"
            android:textSize="@dimen/user_entry_field_text"
            android:singleLine = "true"
            android:imeOptions="actionNext"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_entry_separator"/>

        <EditText
            android:id="@+id/new_patient_zip_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_zip_prompt"
            android:textSize="@dimen/user_entry_field_text"
            android:singleLine = "true"
            android:imeOptions="actionNext"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_entry_separator"/>

        <EditText
            android:id="@+id/new_patient_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_pass_prompt"
            android:textSize="@dimen/user_entry_field_text"
            android:singleLine = "true"
            android:imeOptions="actionNext"
            android:inputType="textPassword"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_entry_separator"/>

        <EditText
            android:id="@+id/new_patient_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_pass_prompt"
            android:textSize="@dimen/user_entry_field_text"
            android:singleLine = "true"
            android:imeOptions="actionNext"
            android:inputType="textPassword"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="70dp"/>

        <Button
            android:id="@+id/new_patient_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background = "@drawable/rounded_button_layout"
            android:text="@string/register_prompt"
            android:textSize="@dimen/full_size_button_text"
            android:textColor="@color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10sp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>