<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorRegistration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="top|center"
            android:src="@mipmap/favicon"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="30sp"/>

        <EditText
            android:id="@+id/new_doctor_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_prompt"
            android:textSize="@dimen/user_entry_field_text"
            android:singleLine = "true"
            android:imeOptions="actionNext"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_entry_separator"/>

        <EditText
            android:id="@+id/new_doctor_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_prompt"
            android:textSize="@dimen/user_entry_field_text"
            android:singleLine = "true"
            android:imeOptions="actionNext"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_entry_separator"/>

        <EditText
            android:id="@+id/new_doctor_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_pass_prompt"
            android:textSize="@dimen/user_entry_field_text"
            android:singleLine = "true"
            android:imeOptions="actionNext"
            android:inputType="textPassword"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_entry_separator"/>

        <EditText
            android:id="@+id/new_doctor_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_pass_prompt"
            android:textSize="@dimen/user_entry_field_text"
            android:singleLine = "true"
            android:imeOptions="actionNext"
            android:inputType="textPassword"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"/>

        <Button
            android:id="@+id/new_doctor_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background = "@drawable/rounded_button_layout"
            android:text="@string/register_prompt"
            android:textSize="@dimen/full_size_button_text"
            android:textColor="@color/white"/>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="10sp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>