<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp">

            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="top|center"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="25sp"
                android:src="@mipmap/favicon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="EDIT PERSONAL INFO"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:textSize="@dimen/user_profile_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab_button_separator" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Full Name"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/edit_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_name"
                android:inputType="text"
                android:textSize="@dimen/user_entry_field_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <Spinner
                android:id="@+id/edit_gender_input"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:spinnerMode="dropdown"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/forced_set_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/user_entry_field_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date of Birth"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/edit_birthdate_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_date_of_birth"
                android:inputType="text"
                android:textSize="@dimen/user_entry_field_text"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Street Address"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/edit_street_address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_address_street"
                android:inputType="text"
                android:textSize="@dimen/user_entry_field_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="City"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/edit_city_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_address_city"
                android:inputType="text"
                android:textSize="@dimen/user_entry_field_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="State"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <Spinner
                android:id="@+id/edit_state_input"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:spinnerMode="dropdown"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ZIP"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/edit_zip_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_address_zip"
                android:inputType="number"
                android:maxLength="5"
                android:textSize="@dimen/user_entry_field_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Marital Status"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <Spinner
                android:id="@+id/edit_marital_input"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:spinnerMode="dropdown"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ethnicity"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <Spinner
                android:id="@+id/edit_ethnicity_input"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:spinnerMode="dropdown"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone Number"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/edit_phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_phone"
                android:inputType="number"
                android:textSize="@dimen/user_entry_field_text"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Primary Insurance Provider"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/edit_primary_insurance_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_insurance"
                android:inputType="text"
                android:textSize="@dimen/user_entry_field_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Primary Insurance Policy Number"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/edit_primary_insurance_policy_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_insurance_policy"
                android:inputType="number"
                android:textSize="@dimen/user_entry_field_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Primary Insurance Group Number"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/edit_primary_insurance_group_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_insurance_group"
                android:inputType="number"
                android:textSize="@dimen/user_entry_field_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Secondary Insurance Provider"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/edit_secondary_insurance_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_insurance"
                android:inputType="text"
                android:textSize="@dimen/user_entry_field_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Secondary Insurance Policy Number"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/edit_secondary_insurance_policy_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_insurance_policy"
                android:inputType="number"
                android:textSize="@dimen/user_entry_field_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Secondary Insurance Group Number"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/edit_secondary_insurance_group_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_insurance_group"
                android:inputType="number"
                android:textSize="@dimen/user_entry_field_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Employer Organization"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/edit_employer_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_employer"
                android:inputType="text"
                android:textSize="@dimen/user_entry_field_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Employer Street Address"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/edit_employer_street_address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_address_street"
                android:inputType="text"
                android:textSize="@dimen/user_entry_field_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Employer City"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/edit_employer_city_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_address_city"
                android:inputType="text"
                android:textSize="@dimen/user_entry_field_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Employer State"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <Spinner
                android:id="@+id/edit_employer_state_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="@dimen/user_entry_field_text"
                android:layout_marginTop="@dimen/text_entry_separator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Employer ZIP"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/text_entry_separator"/>

            <EditText
                android:id="@+id/edit_employer_zip_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_address_zip"
                android:inputType="number"
                android:maxLength="5"
                android:textSize="@dimen/user_entry_field_text"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="80sp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>